インデント調整

--- a/www/game.html
+++ b/www/game.html
@@ -10,12 +10,12 @@
     <script src="components/loader.js"></script>
     <script src="js/ppp.js"></script>
         <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=your_googleAPIKEY&callback=initMap"></script>
+            src="https://maps.googleapis.com/maps/api/js?key=APIKEY&callback=initMap"></script>
 
     <script>
        $(function(){
-           var application_key = "YOURAPIKEY";
-           var client_key = "YOURCLIENTKEY";
+           var application_key = "APIKEY";
+           var client_key = "CLIKEY";
            var ncmb = new NCMB(application_key,client_key);
            
            var user = ncmb.User.getCurrentUser();
