--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 <head>
     <meta charset="utf-8">
@@ -20,11 +20,11 @@
             text-align: center;
         }
         input{
-        border-radius: 5px;
-        padding: 7px;
-        margin-bottom: 10px;
-        width: 200px;
-        font-size: 20px;
+            border-radius: 5px;
+            padding: 7px;
+            margin-bottom: 10px;
+            width: 200px;
+            font-size: 20px;
         
         }
     </style>
